--- a/configs/portal-ext.properties
+++ b/configs/portal-ext.properties
@@ -3,3 +3,5 @@ jdbc.default.url=jdbc:postgresql://postgres:5432/lportal
 jdbc.default.username=liferay
 jdbc.default.password=my-secret-pw
 setup.wizard.enabled=false
+auto.deploy.enabled=true
+auto.deploy.deploy.dir=${liferay.home}/deploy
